--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/*********************************/
+/*            BASE               */
+/*********************************/
+
 body {
   margin: 0;
   padding: 0;
@@ -81,6 +85,24 @@ footer {
   color: #ba8058;
 }
 
+/*********************************/
+/*            SVGS               */
+/*********************************/
+
+.icon {
+  fill:  #39ADD1;
+  height:  24px;
+  width: 28px;
+}
+
+a:hover span {
+  color: #ba8058;
+}
+
+a:hover .icon {
+  fill: #ba8058;
+}
+
 .logo {
   height: 140px;
   width: 120px;
@@ -93,6 +115,10 @@ footer {
 .dog-svg {
   width: 170px;
 }
+
+/*********************************/
+/*       MEDIA QUERIES           */
+/*********************************/
 
 @media screen and (max-width: 420px) {
   .logo-text {
