--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,11 @@ footer {
   fill:  #39ADD1;
   height:  24px;
   width: 28px;
+  transition: transform .4s ease-in-out;
+}
+
+.icon:hover {
+  transform: scale(1.3);
 }
 
 a:hover span {
